# gpt-1

./: .gitignore  pyproject.toml
src/gpt_1/: __init__.py  config.py  utils.py
src/gpt_1/scripts/: preprocess_dataset.py  train_model.py  train_tokenizer.py
