[project]
name = "gpt-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Milos Svana", email = "milos.svana@mailfence.com" }]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.6",
    "pytorch-triton-xpu>=3.3.1",
    "tokenizers>=0.21.1",
    "torch>=2.7.1",
]

[project.scripts]
train-tokenizer = "gpt_1.scripts.train_tokenizer:main"
preprocess-dataset = "gpt_1.scripts.preprocess_dataset:main"
train-model = "gpt_1.scripts.train_model:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
torch = [{ index = "pytorch-xpu" }]
pytorch-triton-xpu = [{ index = "pytorch-xpu" }]

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true
